asupersync-macros/tests/compile_fail/entry_bad_signature.rs
use asupersync_macros::test;

#[test]
async fn takes_two(cx: &asupersync::Cx, other: u8) {}
